@@ -7,3 +7,4 @@ depends:
     product
 xml:
     product.xml
+    configuration.xml
