@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/field[@name='default_account_payable']"
+        position="after">
+        <separator id="product" string="Product" colspan="4"/>
+        <label name="default_product_account_expense"/>
+        <field name="default_product_account_expense"/>
+        <label name="default_product_account_revenue"/>
+        <field name="default_product_account_revenue"/>
+        <separator id="category" string="Category" colspan="4"/>
+        <label name="default_category_account_expense"/>
+        <field name="default_category_account_expense"/>
+        <label name="default_category_account_revenue"/>
+        <field name="default_category_account_revenue"/>
+    </xpath>
+</data>
