@@ -1,3 +1,5 @@
+* Add default revenue/expense configuration
+
 Version 3.6.0 - 2015-04-20
 * Bug fixes (see mercurial logs for details)
 * Add support for PyPy
